# QLED-RLopt

./: README.md  Repo Layout  pyproject.toml  requirements. txt
agent/: dqn_agent.py
data/: data_designs.csv
qled_env/: __init__  _mock_surrogate  comsol_parser.py  parameter_space.py  simulator_interface.py
qled_env/qled_env/: __init__.py  parameter_space.py  reward_function.py  rl_env.py  simulator_interface.py  simulator_interface.py:  surrogate_sim.py
scripts/: run_optimization.py  smoke_test_env.py
surrogate_model/: predict_performance.py  train_surrogate.py
tests/: test_reward_logic.py  test_simulator_interface.py
train/: train_ppo_dummy.py
