[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qled-rlopt"
version = "0.1.0"
description = "QLED RL optimization environment"
requires-python = ">=3.10"
dependencies = [
  "numpy<2.3",
  "gymnasium>=1.0"
]

[tool.setuptools]
packages = ["qled_env", "qled_env.qled_env"]
